@@ -19,12 +19,14 @@ bugs
   
 important issues
 
+  * gradient button
+  * do not special-case INT32 in convert_sv2gimp
   * substr 4th argument form for Net:: -> require 5.005!!!! DO IT!
   * use Gimp qw(GIMP_HOST=jfjf)???
   * brushes look inverted
   * zero-copy PDL support
 [DONE]  * gimp_init, gimp_deinit
-  * duplicate HAVE_VPRINTF in gimp
+[DONE]  * duplicate HAVE_VPRINTF in gimp
   * get rid of superfluous image arguments
   * weighted movement in drawing tools
   * -DMIN_PERL_DEFINE
