@@ -5,7 +5,7 @@ use vars qw($EXTENSIVE_TESTS $GIMPTOOL);
 # difficult at best...
 
 BEGIN {
-  plan tests => 17;
+  plan tests => 25;
 }
 
 END {
@@ -29,18 +29,30 @@ skip($n,sub {($plugins = `$GIMPTOOL -n --install-admin-bin /bin/sh`) =~ s{^.*\s(
 skip($n,sub {-d $plugins});
 skip($n,sub {-x "$plugins/script-fu"});
 
-use Gimp qw(:consts);
+use Gimp;
 $loaded = 1;
 ok(1);
 
+ok(RGBA_IMAGE || RGB_IMAGE);
+ok(RGB_IMAGE ? 1 : 1); # this shouldn't be a pattern match(!)
+
 sub net {
    my($i,$l);
-   skip($n,sub{$i=new Image(300,300,RGB)});
+   skip($n,sub{$i=new Image(10,10,RGB)});
    skip($n,ref $i);
-   skip($n,sub{$l=$i->layer_new(300,300,RGBA_IMAGE,"new layer",100,VALUE_MODE)});
+   skip($n,sub{$l=$i->layer_new(10,10,RGBA_IMAGE,"new layer",100,VALUE_MODE)});
    skip($n,ref $l);
-   skip($n,sub{$i->add_layer($l,0)||1});
+   
+   skip($n,sub{gimp_image_add_layer($l,0) || 1});
    skip($n,sub{$l->get_name()},"new layer");
+   
+   skip($n,sub{$l->paintbrush(50,[1,1,2,2,5,3,7,4,2,8]) || 1});
+   skip($n,sub{$l->paintbrush(30,4,[5,5,8,1]) || 1});
+   
+   skip($n,sub{Plugin->sharpen(RUN_NONINTERACTIVE,$i,$l,10) || 1});
+   skip($n,sub{$l->sharpen(10) || 1});
+   skip($n,sub{plug_in_sharpen($i,$l,10) || 1});
+   
    skip($n,sub{$i->delete || 1});
 }
 
@@ -48,6 +60,7 @@ system("rm","-rf",$dir); #d#FIXME
 ok(sub {mkdir $dir,0700});
 ok(sub {symlink "../Perl-Server","$dir/Perl-Server"});
 skip($n,sub {symlink "$plugins/script-fu","$dir/script-fu"});
+skip($n,sub {symlink "$plugins/sharpen","$dir/sharpen"});
 
 ok (
   open RC,">$dir/gimprc" and
@@ -61,7 +74,7 @@ $Gimp::host = "spawn/";
 
 if(!$n) {
    skip($n,1);
-   Gimp->main;
+   main;
 } else {
    skip($n,0);
    net();
